--- a/Dockerfile.yml
+++ b/Dockerfile.yml
@@ -1,2 +1,2 @@
-FROM shitalkumar58627/mywebserver:latest
-COPY index.html /var/www/html/index.htm
+FROM bitnami/tomcat:latest
+COPY SampleWebApp.war /opt/bitnami/tomcat/webapps_default
