--- a/Dockerfile.yml
+++ b/Dockerfile.yml
@@ -1,2 +1,2 @@
 FROM bitnami/tomcat:latest
-COPY SampleWebApp.war /opt/bitnami/tomcat/webapps_default
+COPY sample.war /opt/bitnami/tomcat/webapps_default
